# dashboard

./: .env.example  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: consts.rs  draw.rs  main.rs  state.rs  update.rs  utils.rs
