[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpha_vantage = "0.10.0"
chrono = "0.4.26"
dotenvy = "0.15.7"
isocountry = "0.3.2"
itertools = "0.11.0"
notan = { version = "0.9.5", features = ["text"] }
reqwest = "0.11.18"
serde = "1.0.171"
tokio = "1.29.1"
weather_util_rust = "0.16.10"
