[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpha_vantage = "0.10"
chrono = "0.4"
dotenvy = "0.15"
futures = "0.3"
isocountry = "0.3"
itertools = "0.12"
notan = { version = "0.11", features = ["text"] }
reqwest = "0.11"
serde = "1.0"
tokio = "1.34"
weather_util_rust = "0.16"
